--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk projectCompileSdk
 
     defaultConfig {
         applicationId "com.example.transitionbutton"
