--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk projectCompileSdk
 
     defaultConfig {
-        minSdk 21
-        targetSdk 32
+        minSdk projectMinSdk
+        targetSdk projectTargetSdk
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -31,10 +31,13 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // core
+    implementation "androidx.core:core-ktx:$coreVer"
+    implementation "androidx.appcompat:appcompat:$appcompatVer"
+    implementation "com.google.android.material:material:$materialVer"
+
+    // testing
+    testImplementation "junit:junit:$junitVer"
+    androidTestImplementation "androidx.test.ext:junit:$junitExtVer"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVer"
 }
